# xkcd-rank

./: Cargo.toml  README.md
src/: download.rs  main.rs  store.rs  util.rs
