[package]
name = "xkcd-rank"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["file", "image"] }
eyre = "0.6.12"
image = { version = "0.25.2", features = ["jpeg", "png"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }
